Ahora conjurecontroller es un wrap de servicecontroller, movido el conjureaction alli para poder usarlo cuando se haga desde armycontroller con attackaction. Lo mismo sera para los artifacts, desde magiccontroller a attackaction. Mejoradas muchas views, fixtures, y arreglados un par de problemas con researchratio y artifactratio. Cambiado enchant por enchantment.

--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -22,12 +22,20 @@
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            Bla
+                            <div class="col-xs-12">Aquí puedes gastar <span class="label label-extra">Turnos</span> y <span class="label label-extra">Oro</span> para reclutar tropas simples para tu ejército. Cuantos más <span class="label label-extra">Barracones</span> tengas, más tropas reclutarás por turno.</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-middle text-center">Fórmula</div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-12 text-center text-only">
+                            TIERRAS<sub>exploradas</sub> = ({{ 3500|nf }} - TIERRAS<sub>jugador</sub> + 333) / 333
                         </div>
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    Bla
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_disband' ) }}"><i class="fa fa-fw fa-user-times"></i><span class="hidden-xs">Desbandar</span></a>
                 </div>
             </div>
         </div>
