--- a/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/disband.html.twig
@@ -15,19 +15,19 @@
         </div>
         <div class="col-xs-12 col-md-6 col-md-offset-3">
             <div class="panel panel-default">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-group"></i>Bla</div>
+                <div class="panel-heading text-center">Mantenimientos</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
                             <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/army.jpg') }}">
                         </div>
                         <div class="col-xs-8 text-padded">
-                            Bla
+                            <div class="col-xs-12">Aquí puedes gastar 1 <span class="label label-extra">Turno</span> para eliminar tropas de tu ejército por si necesitas espacio para nuevas tropas o si crees que tienen un impacto negativo en tu economía y no podrás mantenerlas demasiado tiempo.</div>
                         </div>
                     </div>
                 </div>
                 <div class="panel-footer text-center">
-                    Bla
+                    <a class="btn btn-default" href="{{ path( 'archmage_game_army_recruit' ) }}"><i class="fa fa-fw fa-user-plus"></i><span class="hidden-xs">Reclutar</span></a>
                 </div>
             </div>
         </div>
