--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -14,12 +14,8 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-md-offset-3">
-            <div class="panel panel-default" id="info">
-                <div class="panel-heading text-center">Pujar
-                    <button type="button" class="close" data-target="#info" data-dismiss="alert">
-                        <i class="fa fa-fw fa-lg fa-times-circle"></i>
-                    </button>
-                </div>
+            <div class="panel panel-default">
+                <div class="panel-heading text-center">Pujar en subastas</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -99,7 +95,7 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ auction.research.spell.turnsCost|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ auction.research.spell.turnsResearch|nf }}</div>
                             {# row #}
-                            {% if auction.research.spell.enchant %}
+                            {% if auction.research.spell.enchantment %}
                             <div class="col-xs-4"><i class="fa fa-fw fa-money"></i>{{ auction.research.spell.goldMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-users"></i>{{ auction.research.spell.peopleMaintenance|nf }}</div>
                             <div class="col-xs-4"><i class="fa fa-fw fa-tint"></i>{{ auction.research.spell.manaMaintenance|nf }}</div>
