--- a/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/temple.html.twig
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-xs-12 col-md-offset-3 col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading text-center">Orar</div>
+                        <div class="panel-heading text-center">Rezarle a los dioses</div>
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-4">
