--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -14,12 +14,8 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-md-offset-3">
-            <div class="panel panel-default" id="info">
-                <div class="panel-heading text-center">Defensa Mágica
-                    <button type="button" class="close" data-target="#info" data-dismiss="alert">
-                        <i class="fa fa-fw fa-lg fa-times-circle"></i>
-                    </button>
-                </div>
+            <div class="panel panel-default">
+                <div class="panel-heading text-center">Defensa Mágica</div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
