--- a/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/charge.html.twig
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-xs-12 col-md-offset-3 col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading text-center">{{ player.mana|nf }} / {{ player.manaCap|nf }} Maná en tu reino</div>
+                        <div class="panel-heading text-center">{{ player.manaResourcePerTurn|nf }} <span class="label label-extra">Mana</span> por <span class="label label-extra">Turno</span></div>
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-4">
