--- a/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/explore.html.twig
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-xs-12 col-md-offset-3 col-md-6">
                     <div class="panel panel-default">
-                        <div class="panel-heading text-center">{{ player.lands|nf }} Tierras</div>
+                        <div class="panel-heading text-center">{{ player.freePerTurn|nf }} <span class="label label-extra">Tierras</span> por <span class="label label-extra">Turno</span></div>
                         <div class="panel-body text-responsive">
                             <div class="row">
                                 <div class="col-xs-4">
