--- a/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/dispell.html.twig
@@ -30,7 +30,7 @@
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-12 text-center text-only">
-                            PROB<sub>éxito</sub> = MAX( 75, 100 - BARRERAS<sub>jugador</sub> * 1 / 100 )
+                            PROB<sub>éxito</sub> = MAX(75, 100 - BARRERAS<sub>jugador</sub> * 1 / 100)
                         </div>
                     </div>
                 </div>
@@ -39,9 +39,9 @@
                 </div>
             </div>
         </div>
-        {% for enchantment in player.enchantments %}
+        {% for enchantment in player.enchantmentsOwner %}
         <div class="col-xs-12 col-md-6">
-            <div class="panel panel-default">
+            <div class="panel panel-{{ enchantment.spell.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-link"></i><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
@@ -69,7 +69,37 @@
             </div>
         </div>
         {% endfor %}
-        {% if player.enchantments is empty %}
+        {% for enchantment in player.enchantmentsVictim %}
+            <div class="col-xs-12 col-md-6">
+                <div class="panel panel-{{ enchantment.spell.faction.class }}">
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-link"></i><a href="{{ path('archmage_game_home_help') }}#{{ enchantment.spell.name|slug }}" class="link">{{ enchantment.spell.name }}</a> [{{ enchantment.owner.nick }}]</div>
+                    <div class="panel-body text-responsive">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img class="custom-thumbnail" src="{{ asset( enchantment.spell.image ) }}">
+                            </div>
+                            <div class="col-xs-8 text-padded">
+                                {# row #}
+                                <div class="col-xs-12">{{ enchantment.spell.skill.description|raw }}</div>
+                                {# row #}
+                                <div class="col-xs-12 text-lore"><small><i>"{{ enchantment.spell.lore }}"</i></small></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel-footer text-center">
+                        <form id="enchantment{{ enchantment.id }}" name="enchantment{{ enchantment.id }}" class="form-inline" action="{{ path('archmage_game_magic_dispell') }}" method="post" role="form">
+                            <div class="form-group has-feedback">
+                                <div class="input-group">
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-chain-broken"></i>Intentar Desencantar</button>
+                                    <input type="hidden" id="enchantment" name="enchantment" value="{{ enchantment.id }}" required />
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+        {% if player.enchantmentsOwner and player.enchantmentsVictim is empty %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger ribbon text-responsive text-center" role="alert">
                 <i class="fa fa-fw fa-exclamation-triangle"></i>Actualmente no tienes encantamientos en tu reino, amigos o enemigos. Tal vez deberías <i class="fa fa-fw fa-graduation-cap"></i><a href="{{ path('archmage_game_magic_research') }}">Investigar</a> algunos.
