--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -80,7 +80,7 @@
             }
         });
         $.fn.dataTableExt.pager.numbers_length = 5;
-        oTable.fnFilter(search);
+        //oTable.fnFilter(search);
     });
 </script>
 {% endblock %}
